Fix T55467: nodes cant be resized after recent clickdrag change